# isotope-server

./: .gitignore  Cargo.toml  README.md  config.toml  diesel.toml  docker-compose.yml  example.env
deployments/: Dockerfile  cli-docker-entrypoint.sh  cli-dockerfile  cli.yml  dev.yml  development.yml  docker-entrypoint.sh
isotope-cli/: Cargo.toml
isotope-cli/src/: Cargo.toml  main.rs  users.rs
isotope-models/: Cargo.toml
isotope-models/src/: db.rs  error.rs  lib.rs  schema.rs  users.rs
migrations/2019-10-03-180857_add_users_table/: up.sql
migrations/2019-10-03-192623_create_user_and_instance/: down.sql  up.sql
migrations/2019-10-08-003255_add_privileges_user/: down.sql  up.sql
migrations/2019-10-10-003046_create_user_and_instance/: down.sql  up.sql
migrations/src/: schema.rs
picopik-api/: Cargo.toml
picopik-api/src/: main.rs
picopik-api/src/api/: index.rs  routes.rs
picopik-api/src/app/: users.rs
picopik-cli/: Cargo.toml
picopik-cli-aa/src/: main.rs
picopik-cli/src/: db.rs  main.rs  users.rs
picopik-core/: Cargo.toml
picopik-core/src/: db.rs  error.rs  lib.rs  new_user.rs  schema.rs  users.rs
picopik-core/src/db_util/: mod.rs  user_queries.rs  users.rs
picopik-models/: Cargo.toml
picopik-models/src/: db.rs  error.rs  lib.rs  newUser.rs  new_user.rs  prelude.rs  schema.rs  users.rs
src/: api.rs  error.rs  main.rs  schema.rs  util.rs
src/api/: index.rs
src/app/: users.rs
src/db/: db_conn.rs  mod.rs
static/css/: style.css
templates/: index.html.tera
templates/components/: base.html.tera  footer.html.tera  nav.html.tera
