[package]
name = "isotope-server"
version = "0.1.0"
authors = ["wgahnagl"]
edition = "2018"

[dependencies]
listenfd = "0.3"
actix-web = "1.0.0"
actix-session = "0.2.0"
actix-files = "0.1.1"
env_logger = "0.6"
tera = "0.11.8"
diesel = {version="1.0.0", features = ["postgres"]}
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
