[package]
name = "picopik-api"
version = "0.1.0"
authors = ["wgahnagl"]
edition = "2018"

[dependencies]
listenfd = "0.3"
actix = "0.8.3"
actix-web = "1.0.7"
actix-session = "0.2.0"
actix-files = "0.1.1"
env_logger = "0.6"
tera = "0.11.8"
diesel = {version="1.4.2", features = ["mysql", "r2d2"]}
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
validator = "0.8.0"
validator_derive = "0.8.0"
num_cpus = "1.10.0"
failure = "0.1.5"
serde_json = "1.0.39"

[dependencies.picopik-core]
path = "../picopik-core"
