[package]
name = "picopik-api"
version = "0.1.0"
authors = ["wgahnagl"]
edition = "2018"

[dependencies]
listenfd = "0.3.3"
actix = "0.9.0"
actix-web = "2.0.0"
actix-session = "0.3.0"
actix-files = "0.2.1"
env_logger = "0.7.1"
tera = "0.11.8"
diesel = { version = "1.4.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
validator = "0.10.0"
validator_derive = "0.10.0"
num_cpus = "1.12.0"
failure = "0.1.6"
serde_json = "1.0.48"

[dependencies.picopik-core]
path = "../picopik-core"
