[package]
name = "picopik-cli"
version = "0.1.0"
authors = ["Skyler Jane Clark <skylerjaneclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "picopik-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33"
rpassword = "4.0"
bcrypt = "0.5"
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
actix = "0.8.3"
num_cpus = "1.10.0"
env_logger = "0.7.0"

[dependencies.picopik-models]
path = "../picopik-models"

