[package]
name = "picopik-cli"
version = "0.1.0"
authors = ["Skyler Jane Clark <skylerjaneclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "picopik-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33"
actix = "0.8.3"
chrono = "0.4"

[dependencies.picopik-models]
path = "../picopik-models"
