[package]
name = "picopik-cli"
version = "0.1.0"
authors = ["Skyler Jane Clark <skylerjaneclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "picopik-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
actix = "0.9.0"
chrono = "0.4.10"
diesel = { version = "1.4.3", features = ["mysql", "r2d2", "chrono"] }
futures = "0.3.4"


[dependencies.picopik-core]
path = "../picopik-core"
