
[package]
name = "picopik-core"
version = "0.1.0"
authors = ["Skyler Jane Clark <skylerjaneclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["mysql", "r2d2", "chrono"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
ammonia = "3.0.0"
bcrypt = "0.6.1"
failure = "0.1.6"
serde_json = "1.0.48"
actix = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.4"
validator = "0.10.0"
validator_derive = "0.10.0"
num_cpus = "1.12.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
